--- a/Parilet/BottomSheet/Presentation/fr.lproj/DestinationInfoView.strings
+++ b/Parilet/BottomSheet/Presentation/fr.lproj/DestinationInfoView.strings
@@ -15,7 +15,7 @@
 "R2W-WX-qPz.text" = "350 m";
 
 /* Class = "UILabel"; text = "Accessibility for PWD:"; ObjectID = "SyK-S2-Kgy"; */
-"SyK-S2-Kgy.text" = "Accessibility for PWD:";
+"SyK-S2-Kgy.text" = "Accès PMR:";
 
 /* Class = "UILabel"; text = "12:00-19:00"; ObjectID = "g1l-Hw-HrJ"; */
 "g1l-Hw-HrJ.text" = "12:00-19:00";
@@ -24,4 +24,4 @@
 "sn1-TG-D2g.text" = "Sanisette";
 
 /* Class = "UILabel"; text = "Schedule:"; ObjectID = "yy2-Ho-ZXs"; */
-"yy2-Ho-ZXs.text" = "Schedule:";
+"yy2-Ho-ZXs.text" = "Horaire:";
