added a rate app button

--- a/Toilet Radar/Resources/de.lproj/Localizable.strings
+++ b/Toilet Radar/Resources/de.lproj/Localizable.strings
@@ -20,3 +20,5 @@
 "go_to_settings" = "Zu den Einstellungen gehen";
 
 "cancel" = "Abbrechen";
+
+"am_i_a_good_app" = "Bin ich eine gute App? \nTippe hier, um mich zu bewerten!";
