--- a/Toilet Radar/Resources/es.lproj/Localizable.strings
+++ b/Toilet Radar/Resources/es.lproj/Localizable.strings
@@ -20,3 +20,5 @@
 "go_to_settings" = "Ir a ajustes";
 
 "cancel" = "Cancelar";
+
+"am_i_a_good_app" = "¿Soy una buena aplicación? \n¡Toca aquí para calificarme!";
