--- a/Toilet Radar/Resources/fr.lproj/Localizable.strings
+++ b/Toilet Radar/Resources/fr.lproj/Localizable.strings
@@ -20,3 +20,6 @@
 "go_to_settings" = "Aller aux paramètres";
 
 "cancel" = "Annuler";
+
+"am_i_a_good_app" = "Suis-je une bonne appli? \nAppuyez ici pour me noter!";
+
