--- a/Toilet Radar/Resources/it.lproj/Localizable.strings
+++ b/Toilet Radar/Resources/it.lproj/Localizable.strings
@@ -20,3 +20,5 @@
 "go_to_settings" = "Vai alle impostazioni";
 
 "cancel" = "Annulla";
+
+"am_i_a_good_app" = "Sono un'applicazione di qualità? \nTocca qui per darmi un voto!";
