--- a/Toilet Radar/Resources/ru.lproj/Localizable.strings
+++ b/Toilet Radar/Resources/ru.lproj/Localizable.strings
@@ -20,3 +20,5 @@
 "go_to_settings" = "Перейти в настройки";
 
 "cancel" = "Отмена";
+
+"am_i_a_good_app" = "Я хорошее приложение? \nНажмите здесь, чтобы оценить меня!";
