--- a/Toilet Radar/Resources/uk.lproj/Localizable.strings
+++ b/Toilet Radar/Resources/uk.lproj/Localizable.strings
@@ -20,3 +20,5 @@
 "go_to_settings" = "Перейти до налаштувань";
 
 "cancel" = "Скасувати";
+
+"am_i_a_good_app" = "Чи я добра програма? \nТоркніться тут, щоб мене оцінити!";
